Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105031

a11y AT-SPI: Window-relative positions are incorrect

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.2.6, 6.4.0 RC1, 6.5.0 Beta1
    • 6.5.0 FF
    • None
    • Debian testing, LibreOffice master as of commit d69340d4d1e7f96f0633bebd5abcf20114fbef0f, qtbase dev as of commit 38114b83250cc9b14069d41935fb8822475de45a
    • Linux/X11
    • d40dacf5f4 (qt/qtbase/dev) c8268beef4 (qt/qtbase/6.4) c8268beef4 (qt/tqtc-qtbase/6.4) d40dacf5f4 (qt/tqtc-qtbase/dev) 41f383e79d (qt/tqtc-qtbase/6.2) 7656237a43 (qt/qtbase/6.3) 7656237a43 (qt/tqtc-qtbase/6.3)

    Description

      When requesting window-relative positions via AT-SPI, those return a wrong value for the y coordinate.

      Sample steps to reproduce using the qt6 variant of LibreOffice (s.a. attached screencast):

      1) open a document containing a few paragraphs in LibreOffice Writer using the qt6 variant (not included in official from The Document Foundation yet, can be enabled using the `--enable-qt6` build switch)

      2) start Accerciser

      3) navigate to the first paragraph in Accerciser's tree view

      4) print the screen coordinates and the window-relative coordinates using Accerciser's IPython console, e.g.:

      In [18]: acc.queryComponent().getPosition(pyatspi.component.XY_SCREEN)
      Out[19]: (1972, 245)
      In [19]: acc.queryComponent().getPosition(pyatspi.component.XY_WINDOW)
      Out[20]: (52, 23)

      5) navigate to the next paragraph in the treeview, print its coordinates:

      In [20]: acc.queryComponent().getPosition(pyatspi.component.XY_SCREEN)
      Out[21]: (1972, 263)
      In [21]: acc.queryComponent().getPosition(pyatspi.component.XY_WINDOW)
      Out[22]: (52, 23)

      Expected behavior: As compared to the position of the previous paragraph, the y coordinate for the window-relative position (pyatspi.component.XY_WINDOW) should have increased by the same value as the screen coordinate.

      Actual behavior: The y coordinate of the screen-relative position is incorrect and remains unchanged (s. "Out[20]" and "Out[22]" above).

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            michaelweghorn Michael Weghorn
            michaelweghorn Michael Weghorn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes