a11y atspi: Fix incorrect use of x instead of y position

Fixes: QTBUG-105031
Change-Id: I26fcbfbd5a90982b87dda89b2880efe937f099d8
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit d40dacf5f4697a57314ec77709e4551977d97c29)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>